@@ -1,6 +1,7 @@
 == Version 0.3.1 (in SVN)
 
 * [#11861] Fixed a bug stopping the creating of int variables with non-range domains.
+* Added domain constraints for int variables.
 
 == Version 0.3.0
 
